--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F6F8FC"
     tools:context=".view.ScanFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -11,7 +10,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F6F8FC"
+
         tools:context=".view.MainActivity">
 
         <ScrollView
@@ -22,6 +21,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+
+                android:background="@color/bg_color"
                 android:padding="18dp">
 
                 <LinearLayout
@@ -35,9 +36,8 @@
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_logo_herbamed"
                         android:layout_marginEnd="16dp"
-                        />
+                        android:src="@drawable/ic_logo_herbamed" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -61,7 +61,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Med"
-                                android:textColor="#11AB68"
+                                android:textColor="@color/primary"
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -70,25 +70,175 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Scan tanaman untuk identifikasi herbal."
+                            android:textColor="@color/text_muted_foreground"
                             android:textSize="12sp" />
                     </LinearLayout>
                 </LinearLayout>
 
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_circle_welcome" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="@string/selamat_datang"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/selamat_datang_desc"
+                        android:textColor="@color/text_muted_foreground" />
+
+                </LinearLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp">
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card1"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/card2"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:background="@drawable/custom_card_info"
+                            android:orientation="vertical"
+                            android:padding="10dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="24"
+                                android:textColor="@color/text_blue"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Total Scan"
+                                android:textSize="10sp" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card2"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginHorizontal="10dp"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/card3"
+                        app:layout_constraintStart_toEndOf="@+id/card1"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            android:background="@drawable/custom_card_info"
+                            android:padding="10dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="18"
+                                android:textColor="@color/text_primary"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Tanaman Herbal"
+                                android:textAlignment="center"
+                                android:textSize="10sp" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/card3"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/card2"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:background="@drawable/custom_card_info"
+                            android:orientation="vertical"
+                            android:padding="10dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="8"
+                                android:textColor="@color/text_desctructive"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Bukan Tanaman Herbal"
+                                android:textAlignment="center"
+                                android:textSize="10sp" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:cardCornerRadius="16dp"
                     app:cardElevation="0dp"
-                    app:cardCornerRadius="16dp">
-
-                    <ImageView
-                        android:id="@+id/plantImageView"
+                    app:contentPadding="17dp">
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:background="@color/white"
-                        android:contentDescription="Gambar tanaman yang akan di-scan"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/bg_place_holder" />
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:padding="1dp"
+                        android:background="@drawable/custom_place_holder_img"
+                        >
+                        <ImageView
+                            android:id="@+id/plantImageView"
+                            android:layout_width="match_parent"
+                            android:layout_height="226dp"
+                            android:clipToOutline="true"
+                            android:background="@color/white"
+                            android:contentDescription="Gambar tanaman yang akan di-scan"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/picture_placeholder" />
+                    </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
 
@@ -97,13 +247,83 @@
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:layout_marginTop="10dp"
-                    android:backgroundTint="#232627"
+                    android:backgroundTint="@color/primary"
                     android:text="Ambil Gambar &amp; Scan"
                     android:textSize="12sp"
                     app:cornerRadius="12dp"
-                    app:icon="@drawable/ic_full_sceen"
-                    app:iconGravity="textEnd"
+                    app:icon="@drawable/ic_camera"
+                    app:iconGravity="textStart"
                     app:iconTint="@color/white" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/uploadButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@android:color/transparent"
+                    android:text="Upload Dari Galeri"
+                    android:textColor="@color/primary"
+                    android:textSize="12sp"
+                    app:cornerRadius="12dp"
+                    app:icon="@drawable/ic_upload"
+                    app:iconGravity="textStart"
+                    app:iconTint="@color/primary" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/tips_card"
+                    android:orientation="horizontal"
+                    android:padding="16dp">
+
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:src="@drawable/ic_info_circle" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="10dp"
+                            android:text="💡 Tips Scan Terbaik"
+                            android:textColor="@color/text_blue"
+                            android:textSize="11sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" • Gunakan pencahayaan alami"
+                            android:textSize="8sp"
+                            android:textStyle="italic"
+                            android:textColor="@color/text_blue"
+                            />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" • Fokus pada satu daun utuh"
+                            android:textSize="8sp"
+                            android:textStyle="italic"
+                            android:textColor="@color/text_blue"
+                            />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=" • Hindari bayangan dan blur"
+                            android:textSize="8sp"
+                            android:textStyle="italic"
+                            android:textColor="@color/text_blue"
+                            />
+                    </LinearLayout>
+                </LinearLayout>
 
                 <!-- Skeleton Loader -->
                 <LinearLayout
@@ -145,6 +365,7 @@
                     android:visibility="invisible"
                     app:cardBackgroundColor="@color/white"
                     app:cardCornerRadius="12dp"
+                    app:cardElevation="0dp"
                     tools:visibility="visible">
 
                     <TextView
@@ -157,6 +378,8 @@
                         android:textSize="16sp"
                         tools:text="Hasil analisis akan muncul di sini..." />
                 </androidx.cardview.widget.CardView>
+
+
 
             </LinearLayout>
         </ScrollView>
