--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -15,30 +15,28 @@
 
         <ImageView
             android:id="@+id/historyImageView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:src="@android:drawable/ic_menu_gallery" />
+            tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
             android:id="@+id/historyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:maxLines="3"
+            android:layout_margin="16dp"
             android:ellipsize="end"
+            android:maxLines="3"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/historyImageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:text="🌿 NAMA TANAMAN\n- Umum: Jahe\n- Ilmiah: Zingiber officinale" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/historyImageView"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="🌿 **NAMA TANAMAN**\n   - Umum: Jahe\n   - Ilmiah: Zingiber officinale" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
