--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -10,7 +10,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:background="@color/bg_color"
         tools:context=".view.MainActivity">
 
         <ScrollView
@@ -21,23 +21,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-
                 android:background="@color/bg_color"
                 android:padding="18dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="24dp"
-
                     android:gravity="center"
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:layout_marginEnd="16dp"
-                        android:src="@drawable/ic_logo_herbamed" />
+                        android:src="@drawable/ic_circle_welcome" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -76,33 +73,6 @@
                 </LinearLayout>
 
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_circle_welcome" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="@string/selamat_datang"
-                        android:textColor="@color/black"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/selamat_datang_desc"
-                        android:textColor="@color/text_muted_foreground" />
-
-                </LinearLayout>
-
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -118,15 +88,22 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/card2"
                         app:layout_constraintStart_toStartOf="parent"
+
                         app:layout_constraintTop_toTopOf="parent">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:background="@drawable/custom_card_info"
+                            android:background="#DBEAFE"
                             android:orientation="vertical"
                             android:padding="10dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Total Scan"
+                                android:textSize="10sp" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -135,11 +112,6 @@
                                 android:textColor="@color/text_blue"
                                 android:textStyle="bold" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Total Scan"
-                                android:textSize="10sp" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -160,8 +132,15 @@
                             android:layout_height="match_parent"
                             android:gravity="center"
                             android:orientation="vertical"
-                            android:background="@drawable/custom_card_info"
+                            android:background="#DCFCE7"
                             android:padding="10dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Tanaman Herbal"
+                                android:textAlignment="center"
+                                android:textSize="10sp" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -170,12 +149,6 @@
                                 android:textColor="@color/text_primary"
                                 android:textStyle="bold" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Tanaman Herbal"
-                                android:textAlignment="center"
-                                android:textSize="10sp" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -194,9 +167,16 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:background="@drawable/custom_card_info"
+                            android:background="#FEDBDB"
                             android:orientation="vertical"
                             android:padding="10dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Tanaman Biasa"
+                                android:textAlignment="center"
+                                android:textSize="10sp" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -205,12 +185,6 @@
                                 android:textColor="@color/text_desctructive"
                                 android:textStyle="bold" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Bukan Tanaman Herbal"
-                                android:textAlignment="center"
-                                android:textSize="10sp" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -324,62 +298,6 @@
                             />
                     </LinearLayout>
                 </LinearLayout>
-
-                <!-- Skeleton Loader -->
-                <LinearLayout
-                    android:id="@+id/skeletonLoader"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:orientation="vertical"
-                    android:visibility="gone"
-                    tools:visibility="visible">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:layout_marginBottom="12dp"
-                        android:background="#E0E0E0" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:layout_marginEnd="40dp"
-                        android:layout_marginBottom="12dp"
-                        android:background="#E0E0E0" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:layout_marginEnd="80dp"
-                        android:background="#E0E0E0" />
-                </LinearLayout>
-
-
-                <!-- Card untuk Hasil -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/resultCardView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:visibility="invisible"
-                    app:cardBackgroundColor="@color/white"
-                    app:cardCornerRadius="12dp"
-                    app:cardElevation="0dp"
-                    tools:visibility="visible">
-
-                    <TextView
-                        android:id="@+id/resultTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:minHeight="100dp"
-                        android:padding="16dp"
-                        android:textColor="@android:color/black"
-                        android:textSize="12sp"
-                        tools:text="Hasil analisis akan muncul di sini..." />
-                </androidx.cardview.widget.CardView>
-
-
 
             </LinearLayout>
         </ScrollView>
