--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,10 @@
         <item name="android:statusBarColor">@color/status_bar_dark</item>
     </style>
 
-    <style name="Theme.HerbaMedJabar" parent="Base.Theme.HerbaMedJabar" />
+    <style name="Theme.HerbaMedJabar" parent="Base.Theme.HerbaMedJabar" >
+        <!-- Status bar color. -->
+        <!-- TAMBAHKAN DUA BARIS INI -->
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="android:windowLightStatusBar" >false</item>
+    </style>
 </resources>
